# tmuxtools

./: README.md  alicelayout  chrislayout  new-window  pyproject.toml  reattach  switch-or-create-window  tmux.conf
tmuxtools/: alicelayout.py
