[tool.poetry]
name = "tmuxtools"
version = "0.1.0"
description = ""
authors = ["Alice Purcell <Alice.Purcell.39@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sh = "^1.14.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
alicelayout="tmuxtools.alicelayout:alicelayout"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
